<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <Preference app:key="storage_analyzer" app:title="@string/storage_analyzer" />
    <Preference app:key="default_storage_path" app:title="@string/default_storage_path" />
    <Preference app:key="cache_size" app:title="@string/cache_size" />
    <Preference app:key="clear_cache" app:title="@string/clear_cache" />
    <SwitchPreferenceCompat app:key="auto_clean" app:title="@string/auto_clean" />
    <Preference app:key="clean_interval" app:title="@string/clean_interval" />
    <SwitchPreferenceCompat app:key="delete_empty_folders" app:title="@string/delete_empty_folders" />
    <SwitchPreferenceCompat app:key="delete_thumbnails" app:title="@string/delete_thumbnails" />
    <SwitchPreferenceCompat app:key="delete_apk" app:title="@string/delete_apk_files" />
    <SwitchPreferenceCompat app:key="delete_logs" app:title="@string/delete_log_files" />
    <Preference app:key="manage_storage_access" app:title="@string/manage_storage_access" />
</PreferenceScreen>
