<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_plus_vector"
        android:title="@string/add"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_vector"
        android:title="@string/search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_select_all"
        android:icon="@drawable/ic_select_all_vector"
        android:title="@string/select_all"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_clear_selection"
        android:icon="@drawable/ic_close_vector"
        android:title="@string/clear_selection"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_remove_selected"
        android:icon="@drawable/ic_delete_vector"
        android:title="@string/remove"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_edit_vector"
        android:title="@string/edit"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_info"
        android:icon="@drawable/ic_info_vector"
        android:title="@string/info"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_reorder"
        android:icon="@drawable/ic_reorder_vector"
        android:title="@string/reorder"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share_vector"
        android:title="@string/share"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_export"
        android:icon="@drawable/ic_export_vector"
        android:title="@string/export"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_import"
        android:icon="@drawable/ic_import_vector"
        android:title="@string/import_text"
        app:showAsAction="never" />

</menu>
